# cybersecurity

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  TIMELINE.md  TODO-MANUAL.md  docker-compose.dev.yml  hex.md  package.json  pyproject.toml
.github/workflows/: ci.yml  security.yml
apps/agents/: Dockerfile  pyproject.toml
apps/agents/src/hexstrike/: __init__.py  cli.py  orchestrator.py
apps/agents/src/hexstrike/agents/: __init__.py  chain.py  exploit.py  recon.py  remediation.py  report.py  vuln.py
apps/agents/src/hexstrike/graph/: __init__.py  attack_graph.py  chain_finder.py
apps/agents/src/hexstrike/knowledge/: __init__.py  cve_rag.py  exploit_db.py  mitre_attack.py  owasp.py
apps/agents/src/hexstrike/reporting/: html_generator.py  pdf_generator.py
apps/agents/src/hexstrike/sandbox/: __init__.py  docker_executor.py  rate_limiter.py  scope_enforcer.py
apps/agents/src/hexstrike/tools/: __init__.py  amass.py  base.py  ffuf.py  httpx.py  hydra.py  nmap.py  nuclei.py  shodan_api.py  sqlmap.py  subfinder.py  zap.py
apps/agents/tests/: test_scope_enforcer.py
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/src/: config.py  main.py
apps/api/src/auth/: dependencies.py  jwt.py
apps/api/src/models/: __init__.py  base.py  finding.py  organization.py  report.py  scan.py  target.py  user.py
apps/api/src/routers/: findings.py  reports.py  scans.py  targets.py  webhooks.py
apps/api/src/schemas/: common.py  finding.py  scan.py  target.py
apps/api/tests/: test_health.py
apps/sandbox-images/nmap/: Dockerfile
apps/sandbox-images/nuclei/: Dockerfile
apps/sandbox-images/recon/: Dockerfile
apps/sandbox-images/sqlmap/: Dockerfile
apps/sandbox-images/zap/: Dockerfile
apps/web/: package.json  tailwind.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/findings/: page.tsx
apps/web/src/lib/: api.ts
apps/web/src/stores/: scan-store.ts
infra/kubernetes/base/: kustomization.yaml  namespace.yaml
infra/terraform/: main.tf
scripts/: benchmark.py  build_nuclei_templates.py  seed_cve_db.py
(+4 files in other folders)
