[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hexstrike"
version = "0.1.0"
description = "HexStrike AI Pentesting Platform — Monorepo Root"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.isort]
known-first-party = ["hexstrike"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests", "apps/agents/tests"]
