[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexstrike-agents"
version = "0.1.0"
description = "HexStrike AI Agent Engine"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "docker>=7.1.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "neo4j>=5.20.0",
    "chromadb>=0.5.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "black>=24.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hexstrike"]

[project.scripts]
hexstrike = "hexstrike.cli:app"
